# pi-DoMUS

./: .gitignore  .travis.yml  ALE_2D.prm  ALE_3D.prm  CMakeLists.txt  Doxyfile.in  README.md  ale__navier__stokes_8h.html  ale__navier__stokes_8h_source.html  annotated.html  annotated_dup.js  assembly_8h.html  assembly_8h.js  assembly_8h_source.html  base__interface_8cc.html  base__interface_8h.html  base__interface_8h_source.html  class_a_l_e_navier_stokes-members.html  class_a_l_e_navier_stokes.html  class_a_l_e_navier_stokes.js  class_compressible_neo_hookean_interface-members.html  class_compressible_neo_hookean_interface.html  class_compressible_neo_hookean_interface.js  class_conservative_interface-members.html  class_conservative_interface.html  class_conservative_interface.js  class_free_swelling_three_fields-members.html  class_free_swelling_three_fields.html  class_free_swelling_three_fields.js  class_heat_equation-members.html  class_heat_equation.html  class_heat_equation.js  class_hydro_gel_three_fields-members.html  class_hydro_gel_three_fields.html  class_hydro_gel_three_fields.js  class_interface-members.html  class_interface.html  class_interface.js  class_l_a_deal_i_i-members.html  class_l_a_deal_i_i.html  (+147 more)
Doxygen/: bibliography.bib
analyitcal_stokes/: analytical_stokes_3d.py  io_tools.py
cmake/: pidomus_invoke_autopilot.cmake
cmake/config/: pidomusConfig.cmake.in
cmake/modules/: FindSUNDIALS.cmake
config/: pidomusConfig.cmake.in  pidomusConfigVersion.cmake.in
docker/: Dockerfile
examples/: CMakeLists.txt
examples/heat-equation/: heat.cc  heat.prm  heat_interface.h
examples/heat-equation-direct/: CMakeLists.txt  heat.cc  heat.prm  heat_interface.h
include/: assembly.h  base_interface.h  boundary_values.h  boundary_values_2D.h  boussinesq_flow_problem.h  conservative_interface.h  copy_data.h  dae_time_integrator.h  equation_data.h  heart_fe.h  interface.h  lac_initializer.h  lac_type.h  linear_operator.h  linear_solver.h  n_fields_problem.h  navier_stokes.h  non_conservative_interface.h  non_linear_energy.h  ode_argument.h  pde_system_interface.h  pidomus.h  pidomus_lambdas.h  pidomus_macros.h  pidomus_signals.h  simulator_access.h  solution.h  stokes_derived_interface.h  template.h  tria_helper.h
include/data/: assembly.h
include/interfaces/: ALE_navier_stokes.h  ALE_signal.h  ALE_signal_2D.h  ale_navier_stokes.h  cahn-hilliard.h  compressible_neo_hookean.h  compressible_neo_hookean_iterative.h  compressible_neo_hookean_nitsche.h  conservative.h  dynamic_stokes.h  dynamic_stokes_derived_interface.h  dynamic_stokes_nc.h  eikonal_equation.h  eikonal_equation_two_steps.h  entanglement.h  free_swelling.h  free_swelling_three_fields.h  heat_equation.h  hydrogels_one_field.h  hydrogels_three_fields.h  hydrogels_two_fields_transient.h  interface.h  navier_stokes.h  neo_hookean_two_fields.h  neo_hookean_two_fields_nitsche.h  non_conservative.h  poisson_problem.h  poisson_problem_nitsche.h  poisson_problem_signals.h  scalar_reaction_diffusion_convection.h  scalar_reaction_diffusion_convection_stabilized.h  stokes.h  stokes_derived_interface.h  stokes_nc.h  template.h  turbulence_k_omega.h
include/lac/: lac_initializer.h  lac_type.h
include/old_interfaces/: old_interface.h
main/: fluid-dynamics.cc  heart.cc  heart_2D.cc  hydrogels.cc  scalar_reaction_diffusion_convection.cc  turbulence.cc
script/: indent  ulisse_script.sh
scripts/: build_documentation.sh  check_indentation.sh  dr.sh  indent  set_cache.sh  setup_astyle.sh
scripts/analytical_stokes/: nabla.py
scripts/travis/: install_deal2lkit.sh
search/: all_1.js  all_10.js  all_11.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_22.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  (+104 more)
source/: base_interface.cc  bottom_boundary.txt  boundary_values.cc  boundary_values_2D.cc  boussinesq_flow_problem.cc  dae_time_integrator.cc  heart_fe.cc  interface.cc  main.cc  n_fields_problem.cc  navier_stokes.cc  ode_argument.cc  pidomus.cc  pidomus_assemble.cc  pidomus_boundary_conditions_and_forcing_terms.cc  pidomus_eigen.cc  pidomus_helper_functions.cc  pidomus_lambdas.cc  pidomus_mesh_refinement.cc  pidomus_parameters.cc  postprocessor.cc  side_boundary.txt  simulator_access.cc  solution.cc  tria_helper.cc
step-1/: CMakeLists.txt  poisson_01.cc  poisson_problem_01.prm
tests/: ale_navier_stokes_00.cc  ale_navier_stokes_01.cc  ale_navier_stokes_02.cc  arpack_01.cc  arpack_01.with_arpack=on.output  aux_navier_stokes_01.cc  aux_navier_stokes_01.output  cahn-hilliard_01.cc  cahn-hilliard_01.output  compressible_neo_hookean.cc  compressible_neo_hookean_01.cc  compressible_neo_hookean_01.output  compressible_neo_hookean_02.cc  compressible_neo_hookean_02.output  compressible_neo_hookean_03.cc  compressible_neo_hookean_03.output  compressible_neo_hookean_04.cc  compressible_neo_hookean_04.output  compressible_neo_hookean_05.cc  compressible_neo_hookean_05.output  compressible_neo_hookean_direct_01.cc  compressible_neo_hookean_direct_01.output  design_01.cc  dynamic_stokes_00.cc  dynamic_stokes_00.output  dynamic_stokes_01.cc  dynamic_stokes_01.output  dynamic_stokes_02.cc  dynamic_stokes_02.output  dynamic_stokes_nc_01.cc  dynamic_stokes_nc_01.output  dynamic_stokes_nc_02.cc  dynamic_stokes_nc_02.output  eikonal_equation_01.cc  eikonal_equation_01.output  eikonal_equation_02.cc  eikonal_equation_02.output  eikonal_equation_03.cc  eikonal_equation_03.output  eikonal_equation_04.cc  (+102 more)
tests/parameters/: ale_navier_stokes_00.prm  ale_navier_stokes_00_old.prm  ale_navier_stokes_02.prm  arpack_01.prm  aux_navier_stokes_01.prm  cahn_hilliard_01.prm  compressible_neo_hookean.prm  compressible_neo_hookean_01.prm  compressible_neo_hookean_02.prm  compressible_neo_hookean_03.prm  (+70 more)
(+74 files in other folders)
