cmake_minimum_required(VERSION 3.0)
SET_PROPERTY(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)

set(TARGET "heat")
set(TARGET_SRC heat.cc heat_interface.h)
set(PARAMETER_FILE "heat.prm")

set(CLEAN_UP_FILES "*.vtu" used_parameters.prm)

FIND_PACKAGE(deal.II 8.5 REQUIRED
  HINTS ${deal.II_DIR} ${DEAL_II_DIR} $ENV{DEAL_II_DIR}
  )

DEAL_II_INITIALIZE_CACHED_VARIABLES()

FIND_PACKAGE(deal2lkit 8.5 REQUIRED
  HINTS ${D2K_DIR} ${DEAL2LKIT_DIR} $ENV{D2K_DIR} $ENV{DEAL2LKIT_DIR}
  )
D2K_INITIALIZE_CACHED_VARIABLES()

find_package(pidomus 8.5 REQUIRED
  HINTS ${PIDOMUS_DIR} $ENV{PIDOMUS_DIR})

project(${TARGET})

PIDOMUS_INVOKE_AUTOPILOT()
